[gd_scene load_steps=53 format=3 uid="uid://c7p4yb8qo842k"]

[ext_resource type="Script" uid="uid://c8ksb2nbbe7tf" path="res://player.gd" id="1_dovo2"]
[ext_resource type="Texture2D" uid="uid://wandk0jlox88" path="res://human_sample.png" id="2_gmlin"]
[ext_resource type="Script" uid="uid://iourc46v7n1i" path="res://scenes/player/movement.gd" id="2_lvxji"]
[ext_resource type="Script" uid="uid://bwqyi7dfpbbvc" path="res://scenes/player/input_sync.gd" id="3_p47bc"]
[ext_resource type="Script" uid="uid://c5s3k13gh82nf" path="res://scenes/player/sprites.gd" id="4_0owmy"]
[ext_resource type="Texture2D" uid="uid://dvjt6a5eorh0" path="res://asset/character/shadow.png" id="5_5gtgg"]
[ext_resource type="Texture2D" uid="uid://dehlhiu6mmp8c" path="res://asset/character/character_top.png" id="6_5gtgg"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_p47bc"]
properties/0/path = NodePath(".:sync_position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_lvxji"]
properties/0/path = NodePath(".:local_move_input")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_bcbcq"]
radius = 6.08276

[sub_resource type="Animation" id="Animation_5gtgg"]
resource_name = "idle_up"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_h17s1"]
resource_name = "idle_right"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_je7p5"]
resource_name = "idle_left"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_fm80t"]
resource_name = "run_down"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_gx1jg"]
resource_name = "run_right"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ugbui"]
resource_name = "run_up"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fcs02"]
resource_name = "run_left"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_0owmy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qek5x"]
resource_name = "idle_down"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5gtgg"]
_data = {
&"RESET": SubResource("Animation_0owmy"),
&"idle_down": SubResource("Animation_qek5x"),
&"idle_left": SubResource("Animation_je7p5"),
&"idle_right": SubResource("Animation_h17s1"),
&"idle_up": SubResource("Animation_5gtgg"),
&"run_down": SubResource("Animation_fm80t"),
&"run_left": SubResource("Animation_fcs02"),
&"run_right": SubResource("Animation_gx1jg"),
&"run_up": SubResource("Animation_ugbui")
}

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_0owmy"]
filters = ["Sprites/Bottom/Body:frame", "Sprites/Bottom:scale", "Sprites/Top/Body:frame", "Sprites/Top:scale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qek5x"]
animation = &"bottom_idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5gtgg"]
animation = &"bottom_idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h17s1"]
animation = &"bottom_idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_je7p5"]
animation = &"bottom_idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_fm80t"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qek5x")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_5gtgg")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_h17s1")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_je7p5")
blend_point_3/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gx1jg"]
animation = &"bottom_run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uf5tr"]
animation = &"bottom_run_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lgqa7"]
animation = &"bottom_run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8ydkj"]
animation = &"bottom_run_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_3j4b4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gx1jg")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_uf5tr")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_lgqa7")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_8ydkj")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yj68g"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ioxgp"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cnsyf"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_007i1"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gx1jg"]
states/idle/node = SubResource("AnimationNodeBlendSpace2D_fm80t")
states/idle/position = Vector2(340, 96)
states/run/node = SubResource("AnimationNodeBlendSpace2D_3j4b4")
states/run/position = Vector2(340, 202)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_yj68g"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_ioxgp"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_cnsyf"), "idle", "End", SubResource("AnimationNodeStateMachineTransition_007i1")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ugbui"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fcs02"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_myrg7"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kvlxm"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_uf5tr"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ugbui")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_fcs02")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_myrg7")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_kvlxm")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6cv16"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j4nxn"]
animation = &"run_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_28m0y"]
animation = &"run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uniwh"]
animation = &"run_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_iqsei"]
blend_point_0/node = SubResource("AnimationNodeAnimation_6cv16")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_j4nxn")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_28m0y")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_uniwh")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lgqa7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8ydkj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tffgl"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pk8ii"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3j4b4"]
states/End/position = Vector2(745, 131)
states/Start/position = Vector2(135, 131)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_uf5tr")
states/idle/position = Vector2(341, 131)
states/run/node = SubResource("AnimationNodeBlendSpace2D_iqsei")
states/run/position = Vector2(341, 235)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_lgqa7"), "idle", "End", SubResource("AnimationNodeStateMachineTransition_8ydkj"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_tffgl"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_pk8ii")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_yj68g"]
graph_offset = Vector2(-649.653, 145.08)
nodes/Add2/node = SubResource("AnimationNodeAdd2_0owmy")
nodes/Add2/position = Vector2(0, 220)
nodes/PartBottomMachine/node = SubResource("AnimationNodeStateMachine_gx1jg")
nodes/PartBottomMachine/position = Vector2(-360, 360)
nodes/PartTopMachine/node = SubResource("AnimationNodeStateMachine_3j4b4")
nodes/PartTopMachine/position = Vector2(-360, 140)
nodes/output/position = Vector2(320, 240)
node_connections = [&"Add2", 0, &"PartBottomMachine", &"Add2", 1, &"PartTopMachine", &"output", 0, &"Add2"]

[node name="Player" type="CharacterBody2D"]
collision_layer = 512
script = ExtResource("1_dovo2")
lerp_speed = 30.0

[node name="Movement" type="Node" parent="."]
script = ExtResource("2_lvxji")

[node name="HostSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_p47bc")

[node name="InputSync" type="MultiplayerSynchronizer" parent="."]
root_path = NodePath(".")
replication_config = SubResource("SceneReplicationConfig_lvxji")
script = ExtResource("3_p47bc")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
position_smoothing_enabled = true
position_smoothing_speed = 12.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bcbcq")

[node name="Sprites" type="Node2D" parent="."]
script = ExtResource("4_0owmy")

[node name="Shadow" type="Sprite2D" parent="Sprites"]
position = Vector2(0, 1)
texture = ExtResource("5_5gtgg")

[node name="Body" type="Sprite2D" parent="Sprites"]
position = Vector2(-2, -28)
texture = ExtResource("6_5gtgg")
hframes = 6
vframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
active = false
libraries = {
&"": SubResource("AnimationLibrary_5gtgg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_yj68g")
anim_player = NodePath("../AnimationPlayer")
parameters/Add2/add_amount = 1.0
parameters/PartBottomMachine/idle/blend_position = Vector2(0.10658, -0.694444)
parameters/PartBottomMachine/run/blend_position = Vector2(0, 0)
parameters/PartTopMachine/idle/blend_position = Vector2(0.453197, 0.0277778)
parameters/PartTopMachine/run/blend_position = Vector2(0, 0)

[node name="HumanSample" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, -28)
texture = ExtResource("2_gmlin")
hframes = 10
vframes = 10

[node name="Label" type="Label" parent="."]
z_index = 10
offset_left = -273.0
offset_top = -54.0
offset_right = 273.0
offset_bottom = -31.0
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
